@@ -1,3 +1,5 @@
+HEAD
+	+ Removed unused printer permissions module
 3.2
 	+ Set version to 3.2
 3.1.3
